# rivenforge

./: .gitignore  CHANGELOG.md  PACKAGING.md  README.md  api_sidecar.py  api_sidecar.spec  build.spec  data_util.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  ocr_failure.md  profile_request.md
.github/workflows/: ci.yml  release.yml
api/: __init__.py  app.py  diagnostics.py  events.py  schemas.py  sessions.py
core/: analysis.py  automation.py  capture.py  contracts.py  hotkey.py  models.py  ocr.py  ocr_pipeline.py  parser.py  profile_schema.py  roll_logger.py  roller.py  rules.py  stat_registry.py  vision.py
data/: riven_index.json  stat_aliases.json  stat_aliases_loader.py  tfidf_model.json
docs/: architecture.md  background-ocr-and-automation.md  profile-schema.md  security-and-safety.md  test-plan.md  troubleshooting.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: package-sidecar.ps1
frontend/src/: App.tsx  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/lib/: api.ts
gui/: analysis_panel.py  config_panel.py  debug_panel.py  main_window.py  roll_log.py  settings_panel.py
rag/: embedder.py  ingest.py  rag.py  wfm.py
tests/: test_api.py  test_api_sidecar.py  test_config_migration.py  test_ocr_pipeline.py  test_parser.py  test_profile_schema.py  test_rules.py
